[package]
name = "orderbook-app2"
version = "0.1.0"
edition = "2024"

[dependencies]
pint-abi = "0.11.0"
essential-types = "0.7.0"
hex = "0.4.3"
essential-app-utils = "0.7.0"
essential-builder = "0.11.0"
essential-builder-db = "0.6.0"
essential-node-types = "0.3.0"
essential-node = "0.9.0"
regex = "1.11.1"
tokio = "1.44.1"
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
essential-hash = "0.9.0"
array-init = "2.0"
rand = "0.8"
sha3 = "0.10"